fixes subscribe inputs on mobile

--- a/css/site.styl
+++ b/css/site.styl
@@ -202,6 +202,7 @@ input
   -webkit-appearance: none
   -moz-appearance: none
   border: 0
+  border-radius: 0
   background: none
   font-family: $font-luculent-regular
   padding: 0 0 0.4em
